--- a/dev_env/Dockerfile
+++ b/dev_env/Dockerfile
@@ -1,4 +1,4 @@
 FROM tensorflow/tensorflow:latest-gpu-jupyter
 
 RUN apt-get update && apt-get install ffmpeg libsm6 libxext6  -y
-RUN pip install opencv-contrib-python pandas
+RUN pip install opencv-contrib-python pandas n2v albumentations pydicom beautifulsoup4 lxml
