--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,14 @@ dataset_info.json
 *.pyc
 YOLOv8/training_yolo_v8/runs/*
 logs
+models
+temp_images
+hyper_params
+*.bin
+config.json
+variables
+*pb
+runs
+*.pt
+test*.png
+kernel-metadata.json
